# cue

./: Cargo.toml  README.md  SPARK.md  justfile  pyproject.toml
crates/cue-cli/: Cargo.toml
crates/cue-cli/src/: config.rs  main.rs
crates/cue-client/: Cargo.toml
crates/cue-client/src/: client.rs  lib.rs  reconnect.rs  transport_config.rs  transport_discovery.rs  transport_schema.rs  transport_settings.rs
crates/cue-core/: Cargo.toml
crates/cue-core/src/: agent.rs  command.rs  command_spec.rs  cron.rs  id.rs  ipc.rs  job.rs  lib.rs  mode.rs  pipeline.rs  scope.rs  tui_debug.rs
crates/cue-daemon/: Cargo.toml
crates/cue-daemon/src/: cli.rs  config.rs  dirs.rs  gateway_stdio.rs  lib.rs  sandbox.rs
crates/cue-daemon/src/actor/: gateway.rs  mod.rs  process_mgr.rs  scheduler.rs
crates/cue-daemon/src/parser/: parse.rs
crates/cue-daemon/tests/: daemon_integration.rs
crates/cue-tui/: Cargo.toml
crates/cue-tui/src/: ansi.rs  app.rs  card_action.rs  cli.rs  client.rs  clipboard.rs  completion.rs  display.rs  event.rs  history.rs  lib.rs  sidebar_action.rs  submission.rs  target_config.rs  ui.rs
crates/cue-tui/src/component/: input_line.rs  main_view.rs  sidebar.rs  (+1 more)
crates/cued/: Cargo.toml
crates/cued/src/: config.rs  lib.rs  main.rs  service.rs  storage.rs  upgrade.rs
crates/cued/tests/: integration.rs
docs/design/: README.md  commands-and-modes.md  conceptual-model.md  daemon-architecture.md  ipc-protocol.md  parser.md  sandbox-threat-model.md  tui-debug-control.md  tui.md
docs/research/: syntax-decisions.md
scripts/: cue_tui_debug_smoke.py
(+15 files in other folders)
