[package]
name = "cue-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI entry point for cue-shell: command parsing, mode dispatch"
repository.workspace = true
license.workspace = true

[[bin]]
name = "cue"
path = "src/main.rs"

# First-party companion binaries are sourced from their owning crates. The
# feature gates let package builders select exactly which command surfaces the
# aggregate `cue-cli` package should expose.
[[bin]]
name = "cue-client"
path = "../cue-client/src/bin/cue-client.rs"
required-features = ["cue-client"]

[[bin]]
name = "cue-tui"
path = "../cue-tui/src/bin/cue-tui.rs"
required-features = ["cue-tui"]

[[bin]]
name = "cue-daemon"
path = "../cue-daemon/src/bin/cue-daemon.rs"
required-features = ["cue-daemon"]

[[bin]]
name = "cued"
path = "../cue-daemon/src/bin/cued.rs"
required-features = ["cue-daemon"]

[dependencies]
anyhow.workspace = true
cue-client = { path = "../cue-client" }
cue-core = { path = "../cue-core" }
cue-daemon = { path = "../cue-daemon", optional = true }
cue-tui = { path = "../cue-tui", optional = true }
serde.workspace = true
toml.workspace = true

[dev-dependencies]
libc.workspace = true

[features]
default = ["cue-client", "cue-daemon", "cue-tui"]
cue-client = []
cue-daemon = ["dep:cue-daemon"]
cue-tui = ["dep:cue-tui"]
